--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -558,6 +558,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.top-5 {
+  top: 1.25rem;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -602,6 +606,11 @@ video {
   margin-bottom: 4rem;
 }
 
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .ml-\[-40px\] {
   margin-left: -40px;
 }
@@ -612,6 +621,10 @@ video {
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .flex {
@@ -644,6 +657,10 @@ video {
 
 .max-h-\[1600px\] {
   max-height: 1600px;
+}
+
+.max-h-\[200px\] {
+  max-height: 200px;
 }
 
 .w-3\/4 {
@@ -826,6 +843,11 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -848,6 +870,14 @@ video {
 
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pt-9 {
+  padding-top: 2.25rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
 }
 
 .text-left {
@@ -927,6 +957,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:absolute {
+    position: absolute;
+  }
+
+  .md\:top-3 {
+    top: 0.75rem;
+  }
+
   .md\:mx-5 {
     margin-left: 1.25rem;
     margin-right: 1.25rem;
@@ -995,8 +1033,44 @@ video {
     margin-top: 2rem;
   }
 
+  .md\:block {
+    display: block;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:grid {
+    display: grid;
+  }
+
   .md\:max-h-\[600px\] {
     max-height: 600px;
+  }
+
+  .md\:max-h-\[150px\] {
+    max-height: 150px;
+  }
+
+  .md\:max-h-\[100px\] {
+    max-height: 100px;
+  }
+
+  .md\:max-h-\[130px\] {
+    max-height: 130px;
+  }
+
+  .md\:grid-flow-dense {
+    grid-auto-flow: dense;
+  }
+
+  .md\:grid-flow-row-dense {
+    grid-auto-flow: row dense;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:grid-rows-4 {
@@ -1017,6 +1091,10 @@ video {
 
   .md\:items-end {
     align-items: flex-end;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:items-baseline {
@@ -1045,6 +1123,10 @@ video {
 
   .md\:gap-4 {
     gap: 1rem;
+  }
+
+  .md\:gap-1 {
+    gap: 0.25rem;
   }
 
   .md\:px-5 {
@@ -1097,6 +1179,24 @@ video {
     padding-bottom: 1rem;
   }
 
+  .md\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .md\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .md\:pt-7 {
+    padding-top: 1.75rem;
+  }
+
   .md\:text-left {
     text-align: left;
   }
@@ -1134,6 +1234,10 @@ video {
     margin-left: -40px;
   }
 
+  .xl\:flex {
+    display: flex;
+  }
+
   .xl\:max-h-\[32px\] {
     max-height: 32px;
   }
@@ -1142,12 +1246,24 @@ video {
     max-height: 1600px;
   }
 
+  .xl\:max-h-\[100px\] {
+    max-height: 100px;
+  }
+
+  .xl\:w-auto {
+    width: auto;
+  }
+
   .xl\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .xl\:grid-rows-2 {
     grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+
+  .xl\:grid-rows-1 {
+    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
   .xl\:flex-row {
@@ -1204,12 +1320,38 @@ video {
     padding-bottom: 0.25rem;
   }
 
+  .xl\:px-10 {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
+  .xl\:px-1 {
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+  }
+
   .xl\:pr-20 {
     padding-right: 5rem;
   }
 
   .xl\:pr-5 {
     padding-right: 1.25rem;
+  }
+
+  .xl\:pt-1\.5 {
+    padding-top: 0.375rem;
+  }
+
+  .xl\:pt-1 {
+    padding-top: 0.25rem;
+  }
+
+  .xl\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .xl\:pt-2 {
+    padding-top: 0.5rem;
   }
 
   .xl\:text-left {
